# data-x-claude

./: .gitignore  CLAUDE.md  README.md  core-guidelines.md  datafluxIT-core-prd.md  explorex-guidelines.md  explorex-prd-v3.md  pyproject.toml
.junie/: AGENTS.md
apps/explorex/backend/: .env.example  app.py  dataset_intake.py  kernel_manager.py  notebook_exporter.py  pyproject.toml  result_parser.py
apps/explorex/backend/prompts/: drilldown.py  initial.py  suggestions.py
apps/explorex/frontend/: index.html  package-lock.json  package.json
core/backend/: .env.example  anlisis_descriptivo_de_ventas_20260302_210643.ipynb  anlisis_descriptivo_de_ventas_20260302_210721.ipynb  anlisis_descriptivo_de_ventas_20260302_210801.ipynb  anlisis_descriptivo_de_ventas_20260302_210845.ipynb  anlisis_descriptivo_de_ventas_20260302_210928.ipynb  anlisis_descriptivo_de_ventas_20260302_211010.ipynb  evolucin_precio_bitcoin_20142023_20260302_211422.ipynb  evolucin_precio_bitcoin_20142023_20260302_211750.ipynb  main.py  pyproject.toml
core/backend/_datasets/: Bitcoin_Price_Dataset_2014_2023.csv
core/backend/engine/: __init__.py  ai_runner.py  cache_manager.py  contracts.py  kernel_manager.py  llm_gateway.py  prompt_builder.py  repository.py  result_parser.py  session_manager.py  sphinx_runner.py  suggestion_generator.py
core/backend/notebooks/: template.ipynb
core/backend/tests/: test_ai_runner.py  test_cache_manager.py  test_contracts.py  test_llm_gateway.py  test_main.py  test_prompt_builder.py  test_repository.py  test_result_parser.py  test_session_manager.py
(+32 files in other folders)
