[project]
name = "core-backend"
version = "0.1.0"
description = "Core engine for Explorex Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "jupyter-client>=8.8.0",
    "matplotlib>=3.10.8",
    "motor>=3.7.1",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.20",
    "litellm>=1.73.1",
    "openpyxl>=3.1.5",
    "ipykernel>=7.2.0",
    "scipy>=1.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
